# game_of_life_rust

./: Cargo.toml
src/: game_of_life.rs  game_render.rs  main.rs
