[package]
name = "game_of_life_rust"
version = "0.1.0"
edition = "2021"
authors = ["darksidecat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clearscreen = "1.0.9"
clap = { version = "3.0.14", features = ["derive"] }
crossterm = "0.23.0"
